# dozhim

./: .gitignore  LICENSE  README.md
backend/: alembic.ini  dozhim.db  pyproject.toml  run_worker.py
backend/alembic/: env.py
backend/alembic/versions/: 20260427_0001_initial_schema.py  20260427_0002_extended_tables.py  20260427_0003_import_source_rows.py  20260427_0004_manual_fallback_comment.py  20260427_0005_app_settings.py  20260427_0006_idempotency_records.py  20260427_0007_audit_logs.py  20260427_0008_people_templates_batches.py  20260427_0009_touchpoints.py  20260428_0010_assignment_meeting_fields.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  errors.py
backend/app/db/: __init__.py  models.py
backend/app/schemas/: assignments.py  batches.py  common.py  people.py  templates.py
backend/app/services/: apply_import.py  imports.py  inbound_commands.py  job_runner.py  job_worker.py  jobs.py  scheduling.py  state_machine.py
backend/app/worker/: daemon.py  health_api.py  state.py
backend/tests/: test_assignment_verification_job.py  test_assignments_manual_crud.py  test_assignments_revert_and_filters.py  test_audit_logs.py  test_auth_and_jobs.py  test_campaign_preview_actions.py  test_e2e_campaign_send_flow.py  test_error_contract.py  test_health.py  test_idempotency_middleware.py  test_imports.py  test_job_worker.py  test_jobs_retry_and_allowed_actions.py  test_operator_queue.py  test_people_templates_batches.py  test_policy_guard_and_manual_fallback.py  test_projects_settings_metrics.py  test_rbac.py
(+75 files in other folders)
